# gdPlatformerMode

./: (old)ForSaiModsXD.cpp  CMakeLists.txt  ForSaiModsXD.cpp  README.md  main.cpp  main_NEW.cpp  verInf-universal.rc  verInf.rc
Release/: game001Sheet-hd.plist  game001Sheet-uhd.plist  game001Sheet.plist
geode/: CMakeLists.txt  changelog.md
geode/release/: user95401.gdPlatformerMode.geode
geode/resources/: objectDefinitions.plist
